--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -46,27 +46,31 @@ h1, h2, h3, h4, h5, h6, h7 { font-family: "Open Sans", Verdana, sans-serif; font
 #top-menu a { color: #FFF; font-weight: normal; padding: 4px 5px 5px 5px; margin-right: 0px; }
 #top-menu a:hover { color: #EEE; text-decoration: none; }
 
-div.flash { border: 1px solid; text-shadow: 0 1px white; }
-div#content > div.flash { border: 0px solid; padding: 9px 35px 10px; margin: -5px -10px 1px -10px; background-position-x: 12px !important; background-position-y: 9px !important; position: relative; border-bottom: 1px solid #AECCD7; }
-div#content > div.flash:first-child { -webkit-border-top-left-radius: 8px; -moz-border-radius-topleft: 8px; border-top-left-radius: 8px; -webkit-border-top-right-radius: 8px; -moz-border-radius-topright: 8px; border-top-right-radius: 8px; }
+div.flash { border: 1px solid; }
+div#content > div.flash { padding: 9px 35px 10px; margin: -5px -10px 1px -10px; background-position-x: 12px !important; background-position-y: 9px !important; position: relative; border-bottom: 1px solid #AECCD7; }
 
-#errorExplanation, div.flash, .nodata, .warning, .conflict { padding: 8px 35px 8px 14px; margin-bottom: 20px; font-size: 1.1em; border: 1px solid; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; }
+div#content { border-right: 0 none transparent; }
+#errorExplanation, div.flash, .nodata, .warning, .conflict { padding: 8px 35px 8px 14px; margin-bottom: 20px; font-size: 1.1em; border: 1px solid; }
 
-#errorExplanation, .nodata, .warning { background-color: #fcf8e3; border: 1px solid #fbeed5; color: #c09853; text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5); }
+#errorExplanation, .nodata, .warning { background-color: #fcf8e3; border: 1px solid #fbeed5; color: #c09853; }
 
 div.filters h2 .scope_title a { color: #444; }
 div#content { margin-right: 300px; width: auto; }
 div#main.nosidebar div#content { margin-right: 0px; }
 
-#sidebar { width: 260px !important; padding: 0px 10px 20px 15px !important; background: whiteSmoke; border: 1px solid #ddd; zoom: 1; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05); -moz-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05); box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05); }
+#sidebar {width: 260px !important;
+padding: 0px 10px 20px 15px !important;
+background: #ffffff;
+border: 1px solid #dd4814;
+zoom: 1;}
 
 div#content > h2, div#content h2.contacts_header { border-bottom: 1px solid #ccc; background: #FFF; }
-div#content > div.filters h2, div#content > #add-news > h2, div#content > #add-message > h2, div#content > #add-document > h2 { border-bottom: 1px solid #C5D5DD; background: #E6F1F6; text-shadow: 0px 1px white; -webkit-border-top-left-radius: 4px; -moz-border-radius-topleft: 4px; border-top-left-radius: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topright: 4px; border-top-right-radius: 4px; padding: 8px 20px; margin: -6px -10px 10px; }
+div#content > div.filters h2, div#content > #add-news > h2, div#content > #add-message > h2, div#content > #add-document > h2 { background: #E6F1F6; padding: 8px 20px; margin: -6px -10px 10px; }
 
 .controller-boards.action-index #add-message { position: static; }
 .controller-boards.action-index #add-message #message-form > p { position: relative; padding: 10px; background-color: white; margin: -10px; border-bottom: 1px solid #AECCD7; }
 
-.controller-timelog.action-index div#content h2, .controller-time_entry_reports.action-report div#content h2, .controller-boards.action-show div#content h2, .controller-messages.action-show div#content h2, .controller-boards.action-show div#content div#add-message h2 { -webkit-border-top-left-radius: 0px; -moz-border-radius-topleft: 0px; border-top-left-radius: 0px; -webkit-border-top-right-radius: 0px; -moz-border-radius-topright: 0px; border-top-right-radius: 0px; border-top: 1px solid #AECCD7; /*padding: 9px 20px 12px;*/ margin: -2px -10px 10px; }
+.controller-timelog.action-index div#content h2, .controller-time_entry_reports.action-report div#content h2, .controller-boards.action-show div#content h2, .controller-messages.action-show div#content h2, .controller-boards.action-show div#content div#add-message h2 { margin: -2px -10px 10px; }
 
 .controller-timelog.action-index div#content .contextual, .controller-time_entry_reports.action-report div#content .contextual { margin-top: 50px; }
 
@@ -85,6 +89,12 @@ p.subtitle { margin: 0px 0 12px 0; }
 .contextual a { color: #888; }
 .contextual a:link, .contextual a:visited { color: #888; }
 .contextual a:hover, .contextual a:visited:hover { color: #333; }
+
+
+#sidebar .contextual { padding-top: 3px; }
+#sidebar .contextual a { color: #FFF; }
+#sidebar .contextual a:link, #sidebar .contextual a:visited { color: #FFF; }
+#sidebar .contextual a:hover, #sidebar .contextual a:visited:hover { color: #EEE; }
 
 div.filters h2 .scope_title a { color: #222; text-decoration: none; }
 
@@ -107,12 +117,17 @@ div.issue { background: #FFD; padding: 20px; margin-bottom: 6px; border: 1px sol
 div.issue.tooltip { padding: 6px; margin: 0 0 6px 0; }
 div.contact.details, div.deal.details { padding: 15px !important; margin: -11px -11px 6px; }
 
-#sidebar h3 { color: #222; }
+#sidebar h3 { color: #fff;
+background: #dd4814;
+margin: 10px -10px 5px -15px;
+padding: 5px 10px; }
+
+#sidebar h3:first-child { margin-top: 0px; }
 
 #footer { background-color: #000000; border: 0px; color: #fff; margin-top: 45px; padding: 15px; }
 #footer a { color: #fff; }
 #footer a:hover { color: #eee; }
-#footer .bgl .bgr:after { content: " and froiden-redmine theme"; }
+#footer .bgl .bgr:after { content: " and fedmine theme"; }
 h2, h3, h4 { border-bottom: 0px; }
 
 .wiki h1, .wiki h2, .wiki h3 { border-bottom: 0px; }
@@ -145,6 +160,8 @@ font-size: 15px;
 padding: 5px;
 }
 
+table.list thead th a{ color: #fff !important; }
+
 .odd { background: #f9f9f9; }
 .tabular label { padding-top: 8px; margin-left: 0px; margin-right: 10px;}
 
@@ -154,13 +171,13 @@ tr.assigned-to-me td.assigned_to, tr.created-by-me td.author { font-weight: bold
 #quick-search label { padding-top: 9px;
 display: inline-block;}
 
-table.list td { padding: 6px 10px; }
+table.list td { padding: 6px 10px !important; }
 table.list input[type="checkbox"] { margin-top: 6px; }
 table.list tbody tr.group span.count { padding: 0 9px 1px 9px; -webkit-border-radius: 9px; -moz-border-radius: 9px; border-radius: 9px; background-color: #999999; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); font-weight: bold; font-size: 11.844px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 14px; }
 table.list tbody tr:hover { background-color: #EFF5F8; }
 table.list tr.issue a { color: #666; }
-table.list tr th a { color: #FFF; }
-table.list tr th a:hover, table.list tr td a:focus  { color: #FFF; text-decoration: underline;}
+table.list tr th a { color: #444; }
+table.list tr th a:hover, table.list tr td a:focus  { color: #222; text-decoration: underline;}
 
 legend { color: #484848;
 margin-left: 10px; margin-bottom: 10px;
@@ -357,7 +374,7 @@ option { border-bottom: 1px dotted #ddd; }
 
 .controller-boards p.breadcrumb { position: relative; background: white; border: 0px solid; padding: 9px 13px 10px; margin: -5px -10px 1px -10px; background-position-x: 12px !important; background-position-y: 9px !important; -webkit-border-top-left-radius: 8px; -moz-border-radius-topleft: 8px; border-top-left-radius: 8px; -webkit-border-top-right-radius: 8px; -moz-border-radius-topright: 8px; border-top-right-radius: 8px; position: relative; border-bottom: 1px solid #AECCD7; }
 
-#add-news, #add-message, #add-document { background-color: white; position: relative; border-bottom: 1px solid #AECCD7; margin: -5px -10px 1px -10px; padding: 5px 10px 10px; -webkit-border-top-left-radius: 8px; -moz-border-radius-topleft: 8px; border-top-left-radius: 8px; -webkit-border-top-right-radius: 8px; -moz-border-radius-topright: 8px; border-top-right-radius: 8px; }
+#add-news, #add-message, #add-document { background-color: white; position: relative; margin: -5px -10px 1px -10px; padding: 5px 10px 10px;}
 
 .box { background-color: #FFFFFF;
 padding: 0px;
