--- a/stylesheets/rtl.css
+++ b/stylesheets/rtl.css
@@ -14,7 +14,7 @@ div#content > h2, div#content h2.contacts_header {padding-left: 700px !important
 */
 #top-menu {
 	background-image: url(../images/ghasedak-logo.png);
-	background-position: 35em;
+	background-position: center center;
 }
 .splitcontentright {
 padding-left: 40em;
