--- a/stylesheets/rtl.css
+++ b/stylesheets/rtl.css
@@ -49,7 +49,7 @@ div#main.nosidebar div#content {
 	margin-left: 0;
 	margin-right: 20px;
 }
-
+/*
 .tabular label {
 margin-left: -75px;
 margin-right: 0px;
@@ -60,7 +60,7 @@ text-align: right;
 .tabular input, .tabular select, textarea.text_cf {
 float: left;
 }
-
+*/
 
 
 
