Always render wiki <pre> in ltr
Signed-off-by: Pouyan Heyratpour <heyratpour@ghasedak.com>

--- a/stylesheets/rtl.css
+++ b/stylesheets/rtl.css
@@ -53,6 +53,11 @@ div#main.nosidebar div#content {
 .tabular label {
 	text-align: right;
 }
+
+.wiki pre {
+	direction: ltr;
+}
+
 /*
 .tabular label {
 margin-left: -75px;
