Ignore custom logo
Signed-off-by: Pouyan Heyratpour <heyratpour@ghasedak.com>

--- a/stylesheets/rtl.css
+++ b/stylesheets/rtl.css
@@ -13,7 +13,7 @@ div#content > h2, div#content h2.contacts_header {padding-left: 700px !important
 .splitcontentright {margin-top: 79px !important;}
 */
 #top-menu {
-	background-image: url(../images/ghasedak-logo.png);
+	background-image: url(../images/custom-logo.png);
 	background-position: center center;
 }
 /*
